[package]
name = "wrsfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
structopt = { version = "0.3", default-features = true }
serde = { version = "1.0.133", features = ["derive"] }
bincode = "1.3.3"
serde-big-array = { version = "0.3.2", features = ["const-generics"] }
chrono = { version = "0.4", features = ["serde"] }
